[gd_scene load_steps=5 format=3 uid="uid://dbmhwqyqo3p84"]

[ext_resource type="Script" path="res://Scripts/Gameplay.gd" id="1_r7vlc"]
[ext_resource type="Texture2D" uid="uid://rnhjgvf34aei" path="res://Images/pixel.png" id="2_j863g"]
[ext_resource type="Material" uid="uid://ccq4whxjgyry1" path="res://Materials & Shaders/Epicness Boxes.tres" id="3_psuap"]
[ext_resource type="TileSet" uid="uid://b0evc31pq5v7t" path="res://Scenes/fontTiles.tres" id="4_c65nh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_r7vlc")

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -12.0

[node name="HostSounds" type="AudioStreamPlayer" parent="."]
volume_db = -16.0

[node name="RemixerSounds" type="AudioStreamPlayer" parent="."]
volume_db = -16.0

[node name="BeatTimer" type="Timer" parent="."]
autostart = true

[node name="TimelineBox" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.878431)
position = Vector2(960, 90)
scale = Vector2(1203, 150)
texture = ExtResource("2_j863g")

[node name="RemixerEpicnessBox" type="Sprite2D" parent="."]
self_modulate = Color(0.509083, 0.82, 0.287, 0.878431)
material = ExtResource("3_psuap")
position = Vector2(932, 1064)
scale = Vector2(60, 200)
skew = 0.0349066
texture = ExtResource("2_j863g")
offset = Vector2(0, -0.5)

[node name="HostEpicnessBox" type="Sprite2D" parent="."]
self_modulate = Color(0.82, 0.322533, 0.287, 0.878431)
material = ExtResource("3_psuap")
position = Vector2(988, 1064)
scale = Vector2(64, 200)
skew = -0.0872665
texture = ExtResource("2_j863g")
offset = Vector2(0, -0.5)

[node name="HitMarkers" type="Node2D" parent="."]

[node name="ScoreText" type="TileMap" parent="."]
tile_set = ExtResource("4_c65nh")
format = 2

[connection signal="timeout" from="BeatTimer" to="." method="_on_beat_timer_timeout"]
